login with social accounts

--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,10 +1,20 @@
 <template name="home">
   <div class="template-home">
     <div class="page-header">
-      <h1>Welcome to Project Title</h1>
+      <h2>DEEL UW KENNIS MET ANDEREN OP DE GRATIS APP ‘MOES IN DE STAD’</h2>
     </div>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Sinds een paar jaar bezitten wij een kleine moestuin midden in de stad. Met veel plezier verbouwen we daar verschillende soorten groenten en fruit. Toen we de moestuin aanlegden bleken er heel wat zaaikalenders en boeken over moestuinen te zijn gepubliceerd, maar tot onze verbazing bestond er geen gebruiksvriendelijke moestuin App met heldere informatie en bruikbare tips van ervaren tuinders. Met de gratis iPhone en Android App ‘Moes in de stad’ willen wij daar verandering in brengen. Het idee is dat mensen hun kennis en ervaringen op het gebied van moestuinieren via deze App met anderen delen. Vertel wat je vandaag hebt gedaan in je moestuin en doe dat in de vorm van een tip.
+    </p>
+    <p>
+      <ol>
+        <li>Login met je Facebook-, Google- of Twitteraccount</li>
+        <li>Vertel in een paar zinnen wat je vandaag in de moestuin hebt gedaan</li>
+        <li>Bekijk de gratis bruikbare tips van anderen</li>
+      </ol>
+    </p>
+    <p>
+      &nbsp;
     </p>
   </div>
 </template>
