--- a/client/templates/dashboard/dashboard.html
+++ b/client/templates/dashboard/dashboard.html
@@ -3,10 +3,10 @@
     <div class="page-header">
       <h1>Dashboard</h1>
     </div>
-
+    {{> quickForm collection="Tips" id="insertTipForm" type="insert"}}
     <ul class="list-group">
-      {{#each items}}
-        <li class="list-group-item">{{ name }} <span class="label label-default">{{ rating }}</span></li>
+      {{#each tips}}
+        <li class="list-group-item">{{ description }} <span class="label label-default">{{ rating }}</span></li>
       {{/each}}
     </ul>
 
