--- a/client/templates/layouts/_footer.html
+++ b/client/templates/layouts/_footer.html
@@ -2,7 +2,7 @@
   <footer>
     <div class="container">
       <p class="text-center text-muted">
-        &copy; Copyright Project Title
+        Watch us also on <a href="http://twitter.com/moesindestad">@MoesInDeStad</a>
       </p>
     </div>
   </footer>
